<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorBackground"
    >
  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/scrollView"
      >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RL2">
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/documentID"
          android:hint="@string/documentID"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:maxLength="25"
          android:minLines="1"
          android:textColorHint="@color/colorBlack"
          android:textColor="@color/colorBlack"
          />
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/enter_name_of_student"
          android:id="@+id/name"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:layout_below="@+id/documentID"
          android:textColorHint="@color/colorBlack"
          android:textColor="@color/colorBlack"
          />
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/Rollno"
          android:hint="@string/enter_roll_no"
          android:layout_below="@+id/name"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:textColorHint="@color/colorBlack"
          android:textColor="@color/colorBlack"
          />
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/section"
          android:hint="@string/enter_the_section"
          android:layout_below="@+id/Rollno"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:textColorHint="@color/colorBlack"
          android:textColor="@color/colorBlack"
          />
      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/ADD"
          android:background="@color/colorPrimary"
          android:text="@string/add"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:layout_below="@+id/section"
          android:textColor="@color/colorBlack"
          />
      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/Display"
          android:background="@color/colorPrimary"
          android:text="@string/display"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:layout_below="@+id/ADD"
          android:layout_marginTop="10dp"
          android:textColor="@color/colorBlack"
          />
      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/Delete"
          android:background="@color/colorPrimary"
          android:text="@string/deletedocument"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:layout_below="@+id/Display"
          android:layout_marginTop="10dp"
          android:textColor="@color/colorBlack"
          />
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/TV1"
          android:layout_below="@+id/Delete"
          />
    </RelativeLayout>
  </androidx.core.widget.NestedScrollView>

</RelativeLayout>